# recipe-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  add-recipe.sh  db.db  run.sh
.github/workflows/: rust.yml
assets/recipes_jsons/: crema-al-cafe.json
assets/static/: recipes.json  style.css
client/: Cargo.toml  LICENSE  README.md  index.css  index.html
client/src/: cookie.rs  finder.rs  main.rs  recipe.rs
db/: db.db  db.db-shm  db.db-wal
migrations/: 0001_migrate.down.sql  0001_migrate.up.sql  0002_migrate.up.sql
src/: api.rs  authjwt.rs  error.rs  main.rs  recipe.rs  templates.rs  web.rs
templates/: index.html
